--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-hls-player",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple HLS video player as an Electron CLI app",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
@@ -10,7 +10,7 @@
     "start": "npm run build && electron ./dist/main.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "yannismate",
   "license": "ISC",
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.2",
