--- a/package.json
+++ b/package.json
@@ -2,21 +2,23 @@
   "name": "simple-hls-player",
   "version": "1.0.0",
   "description": "Simple HLS video player as an Electron CLI app",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "npm run build && electron ./dist/main.js",
+    "package": "electron-packager . simple-hls-player --platform=win32 --arch=x64 --out=pkg/ --ignore=\\\"(\\\\pgk|\\\\.idea)\\\" --prune=true --overwrite"
   },
   "keywords": [],
   "author": "yannismate",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "electron": "^13.2.2",
     "eslint": "^7.32.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "electron-packager": "^15.3.0"
   }
 }
