--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "lint": "eslint -c .eslintrc.json --ext .ts ./src",
     "start": "npm run build && electron ./dist/main.js",
     "package": "electron-packager . simple-hls-player --platform=win32 --arch=x64 --out=pkg/ --ignore=\\\"(\\\\pgk|\\\\.idea)\\\" --prune=true --overwrite"
   },
@@ -14,11 +14,11 @@
   "author": "yannismate",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
     "electron": "^13.2.2",
+    "electron-packager": "^15.3.0",
     "eslint": "^7.32.0",
-    "typescript": "^4.4.2",
-    "electron-packager": "^15.3.0"
+    "typescript": "^4.4.2"
   }
 }
